--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "29d00b37-9e7a-4b14-afc6-73bdd49692ee",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "4154fe45-9f67-476d-8cd0-5dc8b7a80250",
    "metadata": {},
    "outputs": [
@@ -74,9 +74,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "findAppClass: module 'tf.apps.tonyjurg/MP-TF.app' has no attribute 'TfApp'\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "findAppClass: Api for \"tonyjurg/MP-TF\" not loaded\n",
       "The requested data is not available offline\n",
       "\t~/text-fabric-data/github/tonyjurg/MP-TF/tf/test not found\n"
      ]
@@ -122,19 +130,19 @@
      "output_type": "stream",
      "text": [
       "   |     0.03s T otype                from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
-      "   |     0.35s T oslots               from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
-      "   |     0.08s T text                 from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
-      "   |     0.06s T chapter              from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
+      "   |     0.31s T oslots               from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
+      "   |     0.07s T text                 from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
+      "   |     0.05s T chapter              from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
       "   |     0.05s T verse                from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
       "   |     0.05s T after_N1904          from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
-      "   |     0.07s T book                 from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
+      "   |     0.06s T book                 from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
       "   |      |     0.01s C __levels__           from otype, oslots, otext\n",
-      "   |      |     0.35s C __order__            from otype, oslots, __levels__\n",
+      "   |      |     0.33s C __order__            from otype, oslots, __levels__\n",
       "   |      |     0.01s C __rank__             from otype, __order__\n",
-      "   |      |     0.70s C __levUp__            from otype, oslots, __rank__\n",
-      "   |      |     0.27s C __levDown__          from otype, __levUp__, __rank__\n",
+      "   |      |     0.73s C __levUp__            from otype, oslots, __rank__\n",
+      "   |      |     0.25s C __levDown__          from otype, __levUp__, __rank__\n",
       "   |      |     0.01s C __characters__       from otext\n",
-      "   |      |     0.15s C __boundary__         from otype, oslots, __rank__\n",
+      "   |      |     0.11s C __boundary__         from otype, oslots, __rank__\n",
       "   |      |     0.02s C __sections__         from otype, oslots, otext, __levUp__, __levDown__, __levels__, book, chapter, verse\n",
       "   |      |     0.03s C __structure__        from otype, oslots, otext, __rank__, __levUp__, book, chapter, verse\n",
       "   |     0.05s T after_KJTR           from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
@@ -143,17 +151,17 @@
       "   |     0.05s T after_TCGNT          from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
       "   |     0.05s T after_TISCH          from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
       "   |     0.05s T monad                from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
-      "   |     0.01s T sentence_KJTR        from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
+      "   |     0.00s T sentence_KJTR        from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
       "   |     0.00s T sentence_N1904       from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
       "   |     0.00s T sentence_SBL         from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
       "   |     0.00s T sentence_SR          from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
-      "   |     0.01s T sentence_TCGNT       from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
+      "   |     0.00s T sentence_TCGNT       from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
       "   |     0.00s T sentence_TISCH       from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
       "   |     0.01s T subsent_KJTR         from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
-      "   |     0.02s T subsent_N1904        from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
-      "   |     0.03s T subsent_SBL          from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
-      "   |     0.03s T subsent_SR           from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
-      "   |     0.02s T subsent_TCGNT        from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
+      "   |     0.01s T subsent_N1904        from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
+      "   |     0.01s T subsent_SBL          from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
+      "   |     0.01s T subsent_SR           from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
+      "   |     0.01s T subsent_TCGNT        from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n",
       "   |     0.01s T subsent_TISCH        from ~/text-fabric-data/github/tonyjurg/MP-TF/tf/test\n"
      ]
     },
@@ -545,7 +553,7 @@
        "            <b>Settings:</b><br><details ><summary><b>specified</b></summary><ol><li><b>apiVersion</b>: <code>3</code></li><li><b>appName</b>: <code>tonyjurg/MP-TF</code></li><li><b>appPath</b>: <code>C:/Users/tonyj/text-fabric-data/github/tonyjurg/MP-TF/app</code></li><li><b>commit</b>: <i>no value</i></li><li><b>css</b>: <code>''</code></li><li><details><summary><b>dataDisplay</b>:</summary><li><details open>\n",
        "                <summary><b>noneValues</b>:</summary>\n",
        "                <ul><li><code>none</code></li><li><code>unknown</code></li><li><i>no value</i></li><li><code>NA</code></li><li><code>''</code></li></ul>\n",
-       "                </details></li></details></li><li><b>interfaceDefaults</b>: {<b>fmt</b>: <code>layout-orig-full</code>}</li><li><b>isCompatible</b>: <code>True</code></li><li><b>local</b>: <i>no value</i></li><li><b>localDir</b>: <code>C:/Users/tonyj/text-fabric-data/github/tonyjurg/MP-TF/_temp</code></li><li><details><summary><b>provenanceSpec</b>:</summary><ul><li><b>corpus</b>: <code>Nestle 1904 (multi punctuated Gospel of John)</code></li><li><b>org</b>: <code>tonyjurg</code></li><li><b>relative</b>: <code>/tf</code></li><li><b>repo</b>: <code>MP-TF</code></li><li><b>repro</b>: <code>MP-FT</code></li><li><b>version</b>: <code>test</code></li><li><details><summary><b>webUrl</b>:</summary><code>https://bibleol.3bmoodle.dk/text/show_text/nestle1904/&lt;1&gt;/&lt;2&gt;/&lt;3&gt;</code></details></li></ul></details></li><li><b>release</b>: <i>no value</i></li><li><details><summary><b>typeDisplay</b>:</summary><ul><li><details><summary><b>book</b>:</summary><ul><li><b>label</b>: <code>{book}</code></li><li><b>style</b>: <code>''</code></li></ul></details></li><li><b>word</b>: {<b>featuresBare</b>: [<code>text</code>]}</li></ul></details></li></ol></details>\n"
+       "                </details></li></details></li><li><b>interfaceDefaults</b>: {<b>fmt</b>: <code>layout-orig-full</code>}</li><li><b>isCompatible</b>: <code>True</code></li><li><b>local</b>: <i>no value</i></li><li><b>localDir</b>: <code>C:/Users/tonyj/text-fabric-data/github/tonyjurg/MP-TF/_temp</code></li><li><details><summary><b>provenanceSpec</b>:</summary><ul><li><b>corpus</b>: <code>Nestle 1904 (multi punctuated Gospel of John)</code></li><li><b>org</b>: <code>tonyjurg</code></li><li><b>relative</b>: <code>/tf</code></li><li><b>repo</b>: <code>MP-TF</code></li><li><b>repro</b>: <code>MP-FT</code></li><li><b>version</b>: <code>test</code></li><li><details><summary><b>webUrl</b>:</summary><code>https://bibleol.3bmoodle.dk/text/show_text/nestle1904/&lt;1&gt;/&lt;2&gt;/&lt;3&gt;</code></details></li></ul></details></li><li><b>release</b>: <i>no value</i></li><li><details><summary><b>typeDisplay</b>:</summary><ul><li><details><summary><b>book</b>:</summary><ul><li><b>label</b>: <code>{book}</code></li><li><b>style</b>: <code>''</code></li></ul></details></li><li><details><summary><b>chapter</b>:</summary><ul><li><b>condense</b>: <code>True</code></li><li><b>label</b>: <code>{chapter}</code></li><li><b>style</b>: <code>''</code></li></ul></details></li><li><details><summary><b>verse</b>:</summary><ul><li><b>condense</b>: <code>True</code></li><li><b>excludedFeatures</b>: <code>chapter verse</code></li><li><b>label</b>: <code>{book} {chapter}:{verse}</code></li><li><b>style</b>: <code>''</code></li></ul></details></li><li><details><summary><b>word</b>:</summary><ul><li><b>base</b>: <code>True</code></li><li><b>featuresBare</b>: <code>text</code></li></ul></details></li></ul></details></li></ol></details>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1265,8 +1273,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "f976c90a-876b-403a-b7d0-c82135ba769a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TF.clearCache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b50d5e9-4c71-446e-ba24-dd22cdb678ba",
    "metadata": {},
    "outputs": [],
    "source": []
