--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "29d00b37-9e7a-4b14-afc6-73bdd49692ee",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "4154fe45-9f67-476d-8cd0-5dc8b7a80250",
    "metadata": {},
    "outputs": [
@@ -74,9 +74,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "findAppClass: inconsistent use of tabs and spaces in indentation (~/text-fabric-data/github/tonyjurg/MPTF/app/app.py, line 8)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "findAppClass: Api for \"tonyjurg/MPTF\" not loaded\n",
       "The requested data is not available offline\n",
       "\t~/text-fabric-data/github/tonyjurg/MPTF/tf/test not found\n"
      ]
@@ -122,31 +130,31 @@
      "output_type": "stream",
      "text": [
       "   |     0.03s T otype                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.33s T oslots               from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.07s T after_N1904          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.32s T oslots               from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.05s T after_N1904          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T verse                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T chapter              from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.07s T text                 from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.06s T book                 from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.08s T book                 from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |      |     0.01s C __levels__           from otype, oslots, otext\n",
       "   |      |     0.32s C __order__            from otype, oslots, __levels__\n",
       "   |      |     0.01s C __rank__             from otype, __order__\n",
-      "   |      |     0.64s C __levUp__            from otype, oslots, __rank__\n",
-      "   |      |     0.27s C __levDown__          from otype, __levUp__, __rank__\n",
+      "   |      |     0.66s C __levUp__            from otype, oslots, __rank__\n",
+      "   |      |     0.29s C __levDown__          from otype, __levUp__, __rank__\n",
       "   |      |     0.01s C __characters__       from otext\n",
-      "   |      |     0.14s C __boundary__         from otype, oslots, __rank__\n",
+      "   |      |     0.12s C __boundary__         from otype, oslots, __rank__\n",
       "   |      |     0.02s C __sections__         from otype, oslots, otext, __levUp__, __levDown__, __levels__, book, chapter, verse\n",
       "   |      |     0.03s C __structure__        from otype, oslots, otext, __rank__, __levUp__, book, chapter, verse\n",
       "   |     0.05s T after_KJTR           from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T after_SBL            from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T after_SR             from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.06s T after_TCGNT          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.05s T after_TCGNT          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T after_TISCH          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T monad                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T sentence_KJTR        from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.00s T sentence_N1904       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.01s T sentence_N1904       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.00s T sentence_SBL         from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.01s T sentence_SR          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.00s T sentence_SR          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.00s T sentence_TCGNT       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T sentence_TISCH       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T subsent_KJTR         from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
@@ -1192,18 +1200,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "method `run_queries` made available"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1213,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "cf67eaab-2240-48cb-ad57-d4c6ab5d51e4",
    "metadata": {},
    "outputs": [
@@ -1265,8 +1261,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "589b1888-7c0c-466b-a605-f92e89017794",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 0 \n",
+      " 1 sentence\n",
+      " 2   word text=λογος\n",
+      " 3 \n",
+      "line 1: Unknown object type: \"sentence\"\n",
+      "Valid object types are: book, chapter, sentence_SR, sentence_SBL, sentence_TISCH, sentence_N1904, sentence_KJTR, sentence_TCGNT, verse, sub_N1904, sub_SBL, sub_TISCH, sub_KJTR, sub_TCGNT, sub_SR, word\n",
+      "Or choose a custom set from: \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.00s 0 results\n"
+     ]
+    }
+   ],
+   "source": [
+    "testQuery2 = \"\"\"\n",
+    "sentence\n",
+    "  word text=λογος\n",
+    "\"\"\"\n",
+    "# Execute the query\n",
+    "testResults = MPTF.run_queries(testQuery2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f280849-1b11-4579-a933-76251e9014ae",
    "metadata": {},
    "outputs": [],
    "source": []
