--- a/test.ipynb
+++ b/test.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4154fe45-9f67-476d-8cd0-5dc8b7a80250",
    "metadata": {},
    "outputs": [
@@ -74,17 +74,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "findAppClass: inconsistent use of tabs and spaces in indentation (~/text-fabric-data/github/tonyjurg/MPTF/app/app.py, line 8)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "findAppClass: Api for \"tonyjurg/MPTF\" not loaded\n",
       "The requested data is not available offline\n",
       "\t~/text-fabric-data/github/tonyjurg/MPTF/tf/test not found\n"
      ]
@@ -130,19 +122,19 @@
      "output_type": "stream",
      "text": [
       "   |     0.03s T otype                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.32s T oslots               from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.33s T oslots               from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T after_N1904          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T verse                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T chapter              from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.07s T text                 from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.08s T book                 from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.06s T book                 from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |      |     0.01s C __levels__           from otype, oslots, otext\n",
-      "   |      |     0.32s C __order__            from otype, oslots, __levels__\n",
+      "   |      |     0.31s C __order__            from otype, oslots, __levels__\n",
       "   |      |     0.01s C __rank__             from otype, __order__\n",
       "   |      |     0.66s C __levUp__            from otype, oslots, __rank__\n",
-      "   |      |     0.29s C __levDown__          from otype, __levUp__, __rank__\n",
+      "   |      |     0.27s C __levDown__          from otype, __levUp__, __rank__\n",
       "   |      |     0.01s C __characters__       from otext\n",
-      "   |      |     0.12s C __boundary__         from otype, oslots, __rank__\n",
+      "   |      |     0.14s C __boundary__         from otype, oslots, __rank__\n",
       "   |      |     0.02s C __sections__         from otype, oslots, otext, __levUp__, __levDown__, __levels__, book, chapter, verse\n",
       "   |      |     0.03s C __structure__        from otype, oslots, otext, __rank__, __levUp__, book, chapter, verse\n",
       "   |     0.05s T after_KJTR           from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
@@ -152,11 +144,11 @@
       "   |     0.05s T after_TISCH          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T monad                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T sentence_KJTR        from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.01s T sentence_N1904       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.00s T sentence_N1904       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.00s T sentence_SBL         from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.00s T sentence_SR          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.00s T sentence_TCGNT       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.01s T sentence_TISCH       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.01s T sentence_TCGNT       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.00s T sentence_TISCH       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T subsent_KJTR         from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T subsent_N1904        from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T subsent_SBL          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
@@ -1200,6 +1192,18 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "method `run_queries` made available"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1209,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "cf67eaab-2240-48cb-ad57-d4c6ab5d51e4",
    "metadata": {},
    "outputs": [
@@ -1240,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "2b50d5e9-4c71-446e-ba24-dd22cdb678ba",
    "metadata": {},
    "outputs": [
@@ -1250,7 +1254,7 @@
        "'\\nsentence_N1904\\n  word text=λογος\\n'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "589b1888-7c0c-466b-a605-f92e89017794",
    "metadata": {},
    "outputs": [
@@ -1270,10 +1274,10 @@
      "output_type": "stream",
      "text": [
       " 0 \n",
-      " 1 sentence\n",
+      " 1 sentenceN1904\n",
       " 2   word text=λογος\n",
       " 3 \n",
-      "line 1: Unknown object type: \"sentence\"\n",
+      "line 1: Unknown object type: \"sentenceN1904\"\n",
       "Valid object types are: book, chapter, sentence_SR, sentence_SBL, sentence_TISCH, sentence_N1904, sentence_KJTR, sentence_TCGNT, verse, sub_N1904, sub_SBL, sub_TISCH, sub_KJTR, sub_TCGNT, sub_SR, word\n",
       "Or choose a custom set from: \n"
      ]
