small debug update

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "29d00b37-9e7a-4b14-afc6-73bdd49692ee",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "4154fe45-9f67-476d-8cd0-5dc8b7a80250",
    "metadata": {},
    "outputs": [
@@ -122,33 +122,33 @@
      "output_type": "stream",
      "text": [
       "   |     0.03s T otype                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.33s T oslots               from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.05s T after_N1904          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.05s T verse                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.31s T oslots               from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.06s T after_N1904          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.06s T verse                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T chapter              from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.07s T text                 from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.06s T book                 from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.07s T book                 from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |      |     0.01s C __levels__           from otype, oslots, otext\n",
-      "   |      |     0.31s C __order__            from otype, oslots, __levels__\n",
+      "   |      |     0.32s C __order__            from otype, oslots, __levels__\n",
       "   |      |     0.01s C __rank__             from otype, __order__\n",
-      "   |      |     0.66s C __levUp__            from otype, oslots, __rank__\n",
-      "   |      |     0.27s C __levDown__          from otype, __levUp__, __rank__\n",
+      "   |      |     0.73s C __levUp__            from otype, oslots, __rank__\n",
+      "   |      |     0.25s C __levDown__          from otype, __levUp__, __rank__\n",
       "   |      |     0.01s C __characters__       from otext\n",
       "   |      |     0.14s C __boundary__         from otype, oslots, __rank__\n",
       "   |      |     0.02s C __sections__         from otype, oslots, otext, __levUp__, __levDown__, __levels__, book, chapter, verse\n",
       "   |      |     0.03s C __structure__        from otype, oslots, otext, __rank__, __levUp__, book, chapter, verse\n",
       "   |     0.05s T after_KJTR           from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.05s T after_SBL            from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.05s T after_SR             from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.12s T after_SBL            from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.07s T after_SR             from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T after_TCGNT          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T after_TISCH          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T monad                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.01s T sentence_KJTR        from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.00s T sentence_N1904       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.00s T sentence_KJTR        from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.01s T sentence_N1904       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.00s T sentence_SBL         from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.00s T sentence_SR          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T sentence_TCGNT       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.00s T sentence_TISCH       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.01s T sentence_TISCH       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T subsent_KJTR         from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T subsent_N1904        from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T subsent_SBL          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "cf67eaab-2240-48cb-ad57-d4c6ab5d51e4",
    "metadata": {},
    "outputs": [
@@ -1221,14 +1221,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.01s 17 results\n"
+      "  0.01s 590 results\n"
      ]
     }
    ],
    "source": [
     "testQuery = \"\"\"\n",
     "sentence_N1904\n",
-    "  word text=λογος\n",
+    "  word text=ο\n",
     "\"\"\"\n",
     "# Execute the query\n",
     "testResults = MPTF.search(testQuery)"
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "f976c90a-876b-403a-b7d0-c82135ba769a",
    "metadata": {},
    "outputs": [],
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "2b50d5e9-4c71-446e-ba24-dd22cdb678ba",
    "metadata": {},
    "outputs": [
@@ -1254,7 +1254,7 @@
        "'\\nsentence_N1904\\n  word text=λογος\\n'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,38 +1265,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "589b1888-7c0c-466b-a605-f92e89017794",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 0 \n",
-      " 1 sentenceN1904\n",
-      " 2   word text=λογος\n",
-      " 3 \n",
-      "line 1: Unknown object type: \"sentenceN1904\"\n",
-      "Valid object types are: book, chapter, sentence_SR, sentence_SBL, sentence_TISCH, sentence_N1904, sentence_KJTR, sentence_TCGNT, verse, sub_N1904, sub_SBL, sub_TISCH, sub_KJTR, sub_TCGNT, sub_SR, word\n",
-      "Or choose a custom set from: \n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.00s 0 results\n"
+      "  0.01s 590 results\n"
      ]
     }
    ],
    "source": [
     "testQuery2 = \"\"\"\n",
     "sentence\n",
-    "  word text=λογος\n",
+    "  word text=ο\n",
     "\"\"\"\n",
     "# Execute the query\n",
-    "testResults = MPTF.run_queries(testQuery2)"
+    "testResults2 = MPTF.run_queries(testQuery2)"
    ]
   },
   {
