--- a/test.ipynb
+++ b/test.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "4154fe45-9f67-476d-8cd0-5dc8b7a80250",
    "metadata": {},
    "outputs": [
@@ -122,30 +122,30 @@
      "output_type": "stream",
      "text": [
       "   |     0.03s T otype                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.31s T oslots               from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.33s T oslots               from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.06s T after_N1904          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.06s T verse                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.05s T verse                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T chapter              from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.07s T text                 from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.07s T book                 from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |      |     0.01s C __levels__           from otype, oslots, otext\n",
-      "   |      |     0.32s C __order__            from otype, oslots, __levels__\n",
+      "   |      |     0.34s C __order__            from otype, oslots, __levels__\n",
       "   |      |     0.01s C __rank__             from otype, __order__\n",
-      "   |      |     0.73s C __levUp__            from otype, oslots, __rank__\n",
-      "   |      |     0.25s C __levDown__          from otype, __levUp__, __rank__\n",
+      "   |      |     0.71s C __levUp__            from otype, oslots, __rank__\n",
+      "   |      |     0.26s C __levDown__          from otype, __levUp__, __rank__\n",
       "   |      |     0.01s C __characters__       from otext\n",
       "   |      |     0.14s C __boundary__         from otype, oslots, __rank__\n",
       "   |      |     0.02s C __sections__         from otype, oslots, otext, __levUp__, __levDown__, __levels__, book, chapter, verse\n",
       "   |      |     0.03s C __structure__        from otype, oslots, otext, __rank__, __levUp__, book, chapter, verse\n",
       "   |     0.05s T after_KJTR           from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.12s T after_SBL            from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.07s T after_SR             from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.05s T after_SBL            from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.05s T after_SR             from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T after_TCGNT          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T after_TISCH          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T monad                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.00s T sentence_KJTR        from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.01s T sentence_N1904       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.00s T sentence_SBL         from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.00s T sentence_N1904       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.01s T sentence_SBL         from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.00s T sentence_SR          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T sentence_TCGNT       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T sentence_TISCH       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "cf67eaab-2240-48cb-ad57-d4c6ab5d51e4",
    "metadata": {},
    "outputs": [
@@ -1221,14 +1221,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.01s 590 results\n"
+      "  0.01s 19 results\n"
      ]
     }
    ],
    "source": [
     "testQuery = \"\"\"\n",
     "sentence_N1904\n",
-    "  word text=ο\n",
+    "  word text=φως\n",
     "\"\"\"\n",
     "# Execute the query\n",
     "testResults = MPTF.search(testQuery)"
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "589b1888-7c0c-466b-a605-f92e89017794",
    "metadata": {},
    "outputs": [
@@ -1273,14 +1273,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.01s 590 results\n"
+      "  0.01s 19 results\n",
+      "N1904 [(16446, 46), (16447, 51), (16449, 88), (16450, 97), (16520, 1593), (16520, 1607), (16521, 1621), (16521, 1627), (16521, 1642), (16717, 5956), (16717, 5971), (16764, 6915), (16827, 8382), (16827, 8397), (16892, 9783), (16893, 9790), (16894, 9809), (16894, 9814), (16900, 9962)]\n"
      ]
     }
    ],
    "source": [
     "testQuery2 = \"\"\"\n",
     "sentence\n",
-    "  word text=ο\n",
+    "  word text=φως\n",
     "\"\"\"\n",
     "# Execute the query\n",
     "testResults2 = MPTF.run_queries(testQuery2)"
