--- a/test.ipynb
+++ b/test.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "4154fe45-9f67-476d-8cd0-5dc8b7a80250",
    "metadata": {},
    "outputs": [
@@ -122,19 +122,19 @@
      "output_type": "stream",
      "text": [
       "   |     0.03s T otype                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.33s T oslots               from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.35s T oslots               from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.06s T after_N1904          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.05s T verse                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.06s T verse                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T chapter              from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.07s T text                 from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.07s T book                 from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.06s T book                 from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |      |     0.01s C __levels__           from otype, oslots, otext\n",
-      "   |      |     0.34s C __order__            from otype, oslots, __levels__\n",
+      "   |      |     0.32s C __order__            from otype, oslots, __levels__\n",
       "   |      |     0.01s C __rank__             from otype, __order__\n",
-      "   |      |     0.71s C __levUp__            from otype, oslots, __rank__\n",
-      "   |      |     0.26s C __levDown__          from otype, __levUp__, __rank__\n",
+      "   |      |     0.66s C __levUp__            from otype, oslots, __rank__\n",
+      "   |      |     0.27s C __levDown__          from otype, __levUp__, __rank__\n",
       "   |      |     0.01s C __characters__       from otext\n",
-      "   |      |     0.14s C __boundary__         from otype, oslots, __rank__\n",
+      "   |      |     0.11s C __boundary__         from otype, oslots, __rank__\n",
       "   |      |     0.02s C __sections__         from otype, oslots, otext, __levUp__, __levDown__, __levels__, book, chapter, verse\n",
       "   |      |     0.03s C __structure__        from otype, oslots, otext, __rank__, __levUp__, book, chapter, verse\n",
       "   |     0.05s T after_KJTR           from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
@@ -144,9 +144,9 @@
       "   |     0.05s T after_TISCH          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.05s T monad                from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.00s T sentence_KJTR        from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.00s T sentence_N1904       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.01s T sentence_SBL         from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
-      "   |     0.00s T sentence_SR          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.01s T sentence_N1904       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.00s T sentence_SBL         from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
+      "   |     0.01s T sentence_SR          from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T sentence_TCGNT       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T sentence_TISCH       from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
       "   |     0.01s T subsent_KJTR         from ~/text-fabric-data/github/tonyjurg/MPTF/tf/test\n",
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "cf67eaab-2240-48cb-ad57-d4c6ab5d51e4",
    "metadata": {},
    "outputs": [
@@ -1244,17 +1244,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "id": "2b50d5e9-4c71-446e-ba24-dd22cdb678ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nsentence_N1904\\n  word text=λογος\\n'"
+       "'\\nsentence_N1904\\n  word text=φως\\n'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,23 +1265,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "id": "589b1888-7c0c-466b-a605-f92e89017794",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 0 \n",
+      " 1 sub\n",
+      " 2   word text=θωμας\n",
+      " 3 \n",
+      "line 1: Unknown object type: \"sub\"\n",
+      "Valid object types are: book, chapter, sentence_SR, sentence_SBL, sentence_TISCH, sentence_N1904, sentence_KJTR, sentence_TCGNT, verse, sub_N1904, sub_SBL, sub_TISCH, sub_KJTR, sub_TCGNT, sub_SR, word\n",
+      "Or choose a custom set from: \n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.01s 19 results\n",
-      "N1904 [(16446, 46), (16447, 51), (16449, 88), (16450, 97), (16520, 1593), (16520, 1607), (16521, 1621), (16521, 1627), (16521, 1642), (16717, 5956), (16717, 5971), (16764, 6915), (16827, 8382), (16827, 8397), (16892, 9783), (16893, 9790), (16894, 9809), (16894, 9814), (16900, 9962)]\n"
+      "  0.00s 0 results\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 0 \n",
+      " 1 sub\n",
+      " 2   word text=θωμας\n",
+      " 3 \n",
+      "line 1: Unknown object type: \"sub\"\n",
+      "Valid object types are: book, chapter, sentence_SR, sentence_SBL, sentence_TISCH, sentence_N1904, sentence_KJTR, sentence_TCGNT, verse, sub_N1904, sub_SBL, sub_TISCH, sub_KJTR, sub_TCGNT, sub_SR, word\n",
+      "Or choose a custom set from: \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N1904 []\n",
+      "  0.00s 0 results\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 0 \n",
+      " 1 sub\n",
+      " 2   word text=θωμας\n",
+      " 3 \n",
+      "line 1: Unknown object type: \"sub\"\n",
+      "Valid object types are: book, chapter, sentence_SR, sentence_SBL, sentence_TISCH, sentence_N1904, sentence_KJTR, sentence_TCGNT, verse, sub_N1904, sub_SBL, sub_TISCH, sub_KJTR, sub_TCGNT, sub_SR, word\n",
+      "Or choose a custom set from: \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KJTR []\n",
+      "  0.00s 0 results\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 0 \n",
+      " 1 sub\n",
+      " 2   word text=θωμας\n",
+      " 3 \n",
+      "line 1: Unknown object type: \"sub\"\n",
+      "Valid object types are: book, chapter, sentence_SR, sentence_SBL, sentence_TISCH, sentence_N1904, sentence_KJTR, sentence_TCGNT, verse, sub_N1904, sub_SBL, sub_TISCH, sub_KJTR, sub_TCGNT, sub_SR, word\n",
+      "Or choose a custom set from: \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SBL []\n",
+      "  0.00s 0 results\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 0 \n",
+      " 1 sub\n",
+      " 2   word text=θωμας\n",
+      " 3 \n",
+      "line 1: Unknown object type: \"sub\"\n",
+      "Valid object types are: book, chapter, sentence_SR, sentence_SBL, sentence_TISCH, sentence_N1904, sentence_KJTR, sentence_TCGNT, verse, sub_N1904, sub_SBL, sub_TISCH, sub_KJTR, sub_TCGNT, sub_SR, word\n",
+      "Or choose a custom set from: \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SR []\n",
+      "  0.00s 0 results\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 0 \n",
+      " 1 sub\n",
+      " 2   word text=θωμας\n",
+      " 3 \n",
+      "line 1: Unknown object type: \"sub\"\n",
+      "Valid object types are: book, chapter, sentence_SR, sentence_SBL, sentence_TISCH, sentence_N1904, sentence_KJTR, sentence_TCGNT, verse, sub_N1904, sub_SBL, sub_TISCH, sub_KJTR, sub_TCGNT, sub_SR, word\n",
+      "Or choose a custom set from: \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TCGNT []\n",
+      "  0.00s 0 results\n",
+      "TISCH []\n"
      ]
     }
    ],
    "source": [
     "testQuery2 = \"\"\"\n",
-    "sentence\n",
-    "  word text=φως\n",
+    "sub\n",
+    "  word text=θωμας\n",
     "\"\"\"\n",
     "# Execute the query\n",
     "testResults2 = MPTF.run_queries(testQuery2)"
@@ -1290,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f280849-1b11-4579-a933-76251e9014ae",
+   "id": "d5f20849-fe20-4a82-a8b2-70f2eefea285",
    "metadata": {},
    "outputs": [],
    "source": []
