--- a/LocalPlayGround.ipynb
+++ b/LocalPlayGround.ipynb
@@ -1275,37 +1275,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "143ebab6-0156-4917-a597-8ac50c1fc36e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test=MPTF.export(testResults2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "0df457ab-2bb1-441b-a3da-af23fa7b9cfa",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "NoneType"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(test)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "105e3784-35df-4209-ae74-a4908267a466",
    "metadata": {},
@@ -1342,9 +1311,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1356,7 +1325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
